--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,15 @@
 {
-	"name": "my-mean-blog",
-	"version": "0.0.1",
-	"description": "A blog and web development playground.",
-	"dependencies": {
-		"bootstrap": "~3",
-		"angular": "~1.2",
-		"angular-resource": "~1.2",
-		"angular-mocks": "~1.2",
-		"angular-bootstrap": "~0.11.2",
-		"angular-ui-utils": "~0.1.1",
-		"angular-ui-router": "~0.2.11"
-	}
+  "name": "my-mean-blog",
+  "version": "0.0.1",
+  "description": "A blog and web development playground.",
+  "dependencies": {
+    "bootstrap": "~3",
+    "angular": "~1.2",
+    "angular-resource": "~1.2",
+    "angular-mocks": "~1.2",
+    "angular-bootstrap": "~0.11.2",
+    "angular-ui-utils": "~0.1.1",
+    "angular-ui-router": "~0.2.11",
+    "nvd3": "~1.7.1"
+  }
 }
