--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-ui-utils": "~0.1.1",
     "angular-ui-router": "~0.2.11",
     "nvd3": "~1.7.1",
-    "angularjs-nvd3-directives": "~0.0.7"
+    "angularjs-nvd3-directives": "~0.0.7",
+    "d3": "~3.5.5"
   }
 }
